@@ -1457,4 +1457,6 @@
 	  to supported multiple root directories. From Ken Petit (2015-11-23).
 	* apps/nshlib:  Add support for 'basename' and 'dirname' commands
 	  (2015-11-23).
+	* apps/nshlib:  Like bash, NSH set command should strip off any
+	  leading or trailing whitespace (2015-11-23).
 
